Correct responsive control styles, change the bottom border to a background gradient to that it does not impact the vertical alignment of the grid.

--- a/packages/web-components/src/components/cbp-tab/cbp-tab.scss
+++ b/packages/web-components/src/components/cbp-tab/cbp-tab.scss
@@ -17,24 +17,20 @@ cbp-tab {
     box-sizing: border-box;
     min-height: var(--cbp-space-14x);
     padding: 0 var(--cbp-space-3x);
-    margin-bottom: calc(var(--cbp-space-half-x) * -1);
     border-bottom: var(--cbp-border-size-xl) solid transparent;
     font-size: var(--cbp-font-size-heading-xs);
     font-weight: var(--cbp-font-weight-medium);
     white-space: nowrap;
     
     &:hover:not([aria-selected='true']):not(:focus) {
-      //color: var(--cbp-color-interactive-secondary-darker);
       background-color: var(--cbp-color-interactive-secondary-lighter);
       border-bottom-color: var(--cbp-color-interactive-secondary-darker);
     }
 
     &[aria-selected='true'] {
       color: var(--cbp-color-interactive-active-dark);
-      //background: unset;
       border-color: var(--cbp-color-interactive-active-dark);
       font-style: italic;
-      //outline: none;
     }
 
     &:focus {
